WRP-2512 - fix on header alignments

--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -43,8 +43,8 @@
  ul.dashboard-link-list li ul {
      padding: 0;
      position: absolute;
-     top: 52px;
-     left: -24px;
+     top: 46px;
+    left: -20px;
      width: 100px;
      font-size: 12px;
      -webkit-box-shadow: none;
